Inactive nav state
Added inactive styling for the navbar links
Increased contrast of inactive states
Improved the navbar mobile layout

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                                 <p>Overview</p>
                             </a>
                         </li>
-                        <li><a href="#">
+                        <li><a href="#" class='link--inactive'>
                                 <p>Foreword</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <p>Audience</p>
                             </a>
                         </li>
@@ -53,43 +53,43 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <h5>03</h5>
                                 <p>Information Architecture</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <h5>04</h5>
                                 <p>Getting from A to B</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <h5>05</h5>
                                 <p>Designing Mobile Interfaces</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <h5>06</h5>
                                 <p>Designing Desktop Interfaces</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <h5>07</h5>
                                 <p>Animating Interfaces</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <h5>08</h5>
                                 <p>Project X-Rays</p>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#"class='link--inactive'>
                                 <h5>09</h5>
                                 <p>Where to from here for UI?</p>
                             </a>
@@ -105,7 +105,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class='link--inactive'>
                                 <p>Swipe Files</p>
                             </a>
                         </li>
@@ -242,7 +242,7 @@
             </div>
         </div>
 
-        <p class='copyright-info'>Copyright © 2018–19 · <a href="https://mrmurphy.com" target='__blank'>Mr Murphy ®</a> + <a href="https://www.adobe.com/products/xd.html" target='__blank'>Adobe XD</a>  <br>  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a>.</p>
+        <p class='copyright-info'>Copyright © 2018–19 · <a href="https://mrmurphy.com" target='__blank'>Mr Murphy ®</a> + <a href="https://www.adobe.com/products/xd.html" target='__blank'>Adobe XD</a>  <br>  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a></p>
     </footer>
 </body>
 </html>
