--- a/introduction/overview.html
+++ b/introduction/overview.html
@@ -21,67 +21,94 @@
                 <li>
                     <p class='submenu__trigger link--active'>Introduction</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/introduction/overview.html">
+                        <li>
+                            <a href="/introduction/overview.html">
                                 <p>Overview</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li><a href="#" class='link--inactive'>
                                 <p>Foreword</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <p>Audience</p>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <p class='submenu__trigger'>Chapters</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/chapters/01-Designing-Interfaces.html">
+                        <li>
+                            <a href="/chapters/01-Designing-Interfaces.html">
                                 <h5>01</h5>
                                 <p>Designing Interfaces</p>
-                            </a></li>
-                        <li><a href="/chapters/02-The-Building-Blocks-of-Interfaces.html">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/chapters/02-The-Building-Blocks-of-Interfaces.html">
                                 <h5>02</h5>
                                 <p>The Building Blocks of Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <h5>03</h5>
                                 <p>Information Architecture</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <h5>04</h5>
                                 <p>Getting from A to B</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <h5>05</h5>
                                 <p>Designing Mobile Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <h5>06</h5>
                                 <p>Designing Desktop Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <h5>07</h5>
                                 <p>Animating Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <h5>08</h5>
                                 <p>Project X-Rays</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"class='link--inactive'>
                                 <h5>09</h5>
                                 <p>Where to from here for UI?</p>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <p class='submenu__trigger'>Resources</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/resources/masterapprentice.html">
+                        <li>
+                            <a href="/resources/masterapprentice.html">
                                 <p>Master-Apprentice Exercises</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class='link--inactive'>
                                 <p>Swipe Files</p>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -300,7 +327,7 @@
             </div>
         </div>
 
-        <p class='copyright-info'>Copyright © 2018–19 · <a href="https://mrmurphy.com" target='__blank'>Mr Murphy ®</a> + <a href="https://www.adobe.com/products/xd.html" target='__blank'>Adobe XD</a>  <br>  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a>.</p>
+        <p class='copyright-info'>Copyright © 2018–19 · <a href="https://mrmurphy.com" target='__blank'>Mr Murphy ®</a> + <a href="https://www.adobe.com/products/xd.html" target='__blank'>Adobe XD</a>  <br>  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a></p>
     </footer>
 </body>
 
