Active state for home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
 
             <ul class="navigation__links">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/index.html link--active'">Home</a></li>
                 <li>
                     <p class='submenu__trigger'>Introduction</p>
                     <ul class='chapter__submenu'>
