--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </nav>
 
         <ul class='navigation__mobile'>
-            <li><a href="/index.html" class='link--active'>Home</a></li>
+            <li><a href="/index.html">Home</a></li>
 
             <li class='link--top'>Inroduction</li>
             <li>
