--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 ---
 layout: default
-title: Homepage
-
+title: Home
 ---
-<section class="row">
-  <div class="col">
-    <h2>{{ page.title }}</h2>
-    <p>Homepage Content</p>
-  </div>
-  
-</section>
+<main class='content--home'>
+    <section class="intro__wrapper">
+        <div class="intro__container">
+            <div class="logo--adobe">
+                <svg version="1.1" id="ps_x5F_cc_x5F_app_x5F_RGB.svg" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240 234"
+                    xml:space="preserve">
+                    <path style="fill:#FF26BE;" d="M197.5,234h-155C19,234,0,215,0,191.5v-149C0,19,19,0,42.5,0h155C221,0,240,19,240,42.5v149
+                        C240,215,221,234,197.5,234z" />
+                    <path style="fill:#2E001F;" d="M193.7,224H46.3c-20,0-36.3-16.3-36.3-36.3V46.3C10,26.3,26.3,10,46.3,10h147.3
+                        c20.1,0,36.3,16.3,36.3,36.3v141.3C230,207.7,213.7,224,193.7,224z" />
+                    <path style="fill:#FFD9F2;" d="M94.9,109.5l28,53.8c0.5,0.8,0.2,1.6-0.6,1.6h-17.4c-1.1,0-1.6-0.3-2.1-1.3
+                        c-6.4-13.2-12.9-26.4-19.6-40.6H83c-6,13.4-12.6,27.5-19,40.7c-0.5,0.8-1,1.1-1.8,1.1H45.7c-1,0-1.1-0.8-0.6-1.4l27.4-52.2L46,58.4
+                        c-0.6-0.8,0-1.4,0.6-1.4h17.2c1,0,1.4,0.2,1.8,1.1c6.3,13.2,12.7,26.8,18.7,40.1h0.2c5.8-13.2,12.2-26.9,18.4-40
+                        c0.5-0.8,0.8-1.3,1.8-1.3h16.1c0.8,0,1.1,0.6,0.6,1.4L94.9,109.5z M127.8,125.8c0-23.3,15.5-41.5,40.1-41.5c2.1,0,3.2,0,5.2,0.2V58
+                        c0-0.6,0.5-1,1-1h15.8c0.8,0,1,0.3,1,0.8v91.8c0,2.7,0,6.1,0.5,9.8c0,0.6-0.2,0.8-0.8,1.1c-8.4,4-17.2,5.8-25.6,5.8
+                        C143.3,166.4,127.8,153,127.8,125.8z M173.1,100.2c-1.4-0.6-3.4-1-5.8-1c-12.6,0-21.4,9.7-21.4,25.8c0,18.4,9,25.8,20.3,25.8
+                        c2.4,0,5-0.3,6.9-1.1V100.2z" />
+                </svg>
+                <p>Presented by Adobe XD</p>
+            </div>
+            <h1>Building Beautiful UIs</h1>
+            <p>A course by Christopher Murphy</p>
+        </div>
+    </section>
+
+    <section class="introduction__container">
+        <div class="content__wrapper">
+            <h2>Introduction</h2>
+            <nav class="grid__container">
+                <a href="/introduction/overview.html">Overview</a>
+                <a href="#" class='link--inactive'>Foreword</a>
+                <a href="#" class='link--inactive'>Audience</a>
+            </nav>
+        </div>
+    </section>
+
+    <section class="chapters__container">
+        <div class="content__wrapper">
+            <h2>Chapters</h2>
+            <nav class="grid__container">
+                <a href="/chapters/01-Designing-Interfaces.html">
+                    <h2>01</h2>
+                    <p>Designing Interfaces</p>
+                </a>
+                <a href="/chapters/02-The-Building-Blocks-of-Interfaces.html">
+                    <h2>02</h2>
+                    <p>The Building Blocks of Interfaces</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>03</h2>
+                    <p>Information Architecture</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>04</h2>
+                    <p>Getting from A to B</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>05</h2>
+                    <p>Designing Mobile Interfaces</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>06</h2>
+                    <p>Designing Desktop Interfaces</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>07</h2>
+                    <p>Animating Interfaces</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>08</h2>
+                    <p>Project X-Rays</p>
+                </a>
+                <a href="#" class='link--inactive'>
+                    <h2>09</h2>
+                    <p>Where to from here for UI?</p>
+                </a>
+            </nav>
+        </div>
+    </section>
+
+    <section class="resources__container">
+        <div class="content__wrapper">
+            <h2>Resources</h2>
+            <nav class="grid__container">
+                <a href="/resources/masterapprentice.html">Master-Apprentice Exercises</a>
+                <a href="#" class='link--inactive'>Adobe XD Swipe Files</a>
+            </nav>
+        </div>
+    </section>
+
+    <section class="additional-content">
+        <div class="content__wrapper">
+            <h4>To explore the book’s accompanying digital files</h4>
+            <h3>Download Adobe XD</h3>
+            <p>Adobe XD is made for designers by designers. It’s the fastest way to design, prototype and share any
+                user experience, from websites and mobile apps to voice interactions and more. Even better, it’s
+                free.</p>
+            <a href="https://www.adobe.com/products/xd.html" class='button__cta' target='__blank'>Download Now</a>
+        </div>
+    </section>
+</main>
