Refactor Navbar and SCSS

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
         <div class="content__wrapper">
             <h2>Introduction</h2>
             <nav class="grid__container">
-                <a href="/introduction/overview.html">Overview</a>
+                <a href="/introduction/overview">Overview</a>
                 <a href="#" class='link--inactive'>Foreword</a>
                 <a href="#" class='link--inactive'>Audience</a>
             </nav>
@@ -43,11 +43,11 @@ title: Home
         <div class="content__wrapper">
             <h2>Chapters</h2>
             <nav class="grid__container">
-                <a href="/chapters/01-Designing-Interfaces.html">
+                <a href="/chapters/01-Designing-Interfaces">
                     <h2>01</h2>
                     <p>Designing Interfaces</p>
                 </a>
-                <a href="/chapters/02-The-Building-Blocks-of-Interfaces.html">
+                <a href="/chapters/02-The-Building-Blocks-of-Interfaces">
                     <h2>02</h2>
                     <p>The Building Blocks of Interfaces</p>
                 </a>
@@ -87,10 +87,20 @@ title: Home
         <div class="content__wrapper">
             <h2>Resources</h2>
             <nav class="grid__container">
-                <a href="/resources/masterapprentice.html">Master-Apprentice Exercises</a>
+                <a href="/resources/masterapprentice">Master-Apprentice Exercises</a>
                 <a href="#" class='link--inactive'>Adobe XD Swipe Files</a>
             </nav>
         </div>
+    </section>
+
+    <section class="resources__container">
+      <div class="content__wrapper">
+        <h2>End Matter</h2>
+        <nav class="grid__container">
+          <a href="#" class='link--inactive'>Acknowledgements</a>
+          <a href="#" class='link--inactive'>Colophon</a>
+        </nav>
+      </div>
     </section>
 
     <section class="additional-content">
