--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@ title: Home
         </div>
     </section>
 
+    <section class="intro__start">
+      <div class="content__wrapper">
+        <p>A free resource that lets you master the fundamental principles of user interface design, written by <a href="https://twitter.com/fehler" target="__blank">Christopher Murphy</a> and supported by <a href="https://www.adobe.com/products/xd.html" target="__blank">Adobe</a>. ‘Building Beautiful UIs’ is a ‘course in a book’ with accompanying digital extras, including: XD files, UI patterns and more.</p>
+
+        <a href="/introduction/overview" class="cta">Get started! <svg xmlns="http://www.w3.org/2000/svg" width="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="square" stroke-linejoin="arcs"><path d="M5 12h13M12 5l7 7-7 7"/></svg></a>
+      </div>
+    </section>
+
     <section class="introduction__container">
         <div class="content__wrapper">
             <h2>Introduction</h2>
