--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ title: Home
     </section>
 
     <section class="additional-content">
-        <div class="content__wrapper">
+        <div class="content__wrapper adobe">
             <h4>To explore the book’s accompanying digital files</h4>
             <h3>Download Adobe XD</h3>
             <p>Adobe XD is made for designers by designers. It’s the fastest way to design, prototype and share any
