Fixed links on home page, etc..

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: Home
                     <h2>02</h2>
                     <p>The Building Blocks of Interfaces</p>
                 </a>
-                <a href="#" class='link--inactive'>
+                <a href="/chapters/03-Information-Architecture/">
                     <h2>03</h2>
                     <p>Information Architecture</p>
                 </a>
