--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ title: Home
             <p>Adobe XD is made for designers by designers. It’s the fastest way to design, prototype and share any
                 user experience, from websites and mobile apps to voice interactions and more. Even better, it’s
                 free.</p>
-            <a href="https://www.adobe.com/products/xd.html" class='button__cta' target='__blank'>Download Now</a>
+            <a href="https://www.adobe.com/products/xd.html" class='cta' target='__blank'>Download Now</a>
         </div>
     </section>
 </main>
